--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.8",
+    "firebase": "^9.9.4",
+    "firebase-admin": "^11.0.1",
     "pinia": "^2.0.21",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5"
   },
