--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
+    "vue3-gravatar": "^3.0.0",
     "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
